--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -1,9 +1,9 @@
 <nav class="navbar navbar-light bg-light">
   <div class="container-fluid">
     <a class="navbar-brand">Food Delivery Service</a>
-    <form class="d-flex">
-      <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-      <button class="btn btn-outline-success" type="submit">Search</button>
+    <form class="d-flex" [formGroup]="navForm">
+      <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search" formControlName="search">
+      <button class="btn btn-outline-success" type="button" (click)="setSearch()">Search</button>
 
       <button class="btn" type="button" (click)="logout()"> Logout </button>
     </form>
@@ -13,3 +13,4 @@
 <div>
     <app-food-list></app-food-list>
 </div>
+
