Add State management, APP_INITIALIZER, Address Form Validation

--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-light bg-light">
+<nav class="navbar navbar-light">
   <div class="container-fluid">
     <a class="navbar-brand">Food Delivery Service</a>
     <form class="d-flex" [formGroup]="navForm">
