--- a/src/app/dashboard/address-entry/address-entry.component.html
+++ b/src/app/dashboard/address-entry/address-entry.component.html
@@ -1,7 +1,49 @@
-<h2>Enter Your Address</h2>
-<form [formGroup]="addressForm" (ngSubmit)="proceed()">
-  <input formControlName="name" placeholder="Your Name" class="form-control mb-2" />
-  <input formControlName="street" placeholder="Street" class="form-control mb-2" />
-  <input formControlName="city" placeholder="City" class="form-control mb-2" />
-  <button type="submit" class="btn btn-success">Place Order</button>
+<h2 class="mt-3 mb-3">Enter Your Address</h2>
+<form [formGroup]="addressForm">
+  <div class="row mt-4">
+    <div class="col-sm-6 col-12">
+      <input formControlName="name" placeholder="Your Full Name" class="form-control"
+        [ngClass]="{ 'is-invalid': addressForm.get('name')?.touched && addressForm.get('name')?.invalid }" />
+      <p *ngIf="addressForm.get('name')?.invalid && addressForm.get('name')?.touched" class="text-danger">
+        Enter Name
+      </p>
+      <p class="text-danger" *ngIf="addressForm.get('name')?.touched && addressForm.get('name')?.hasError('minlength')"> Please enter atleast 3 characters. </p>
+    </div>
+  </div>
+
+  <div class="row mt-4">
+    <div class="col-sm-6 col-12">
+      <input formControlName="addressOne" placeholder="Address Line 1" class="form-control" 
+      [ngClass]="{ 'is-invalid': addressForm.get('addressOne')?.touched && addressForm.get('addressOne')?.invalid }"/>
+       <p *ngIf="addressForm.get('addressOne')?.invalid && addressForm.get('addressOne')?.touched" class="text-danger">
+        Enter Address
+      </p>
+    </div>
+  </div>
+
+  <div class="row mt-4">
+    <div class="col-sm-6 col-12">
+      <input formControlName="addressTwo" placeholder="Address Line 2 (Optional)" class="form-control" />
+    </div>
+  </div>
+
+  <div class="row mt-4">
+    <div class="col-sm-6 col-12">
+      <input formControlName="city" placeholder="City" class="form-control" 
+      [ngClass]="{ 'is-invalid': addressForm.get('city')?.touched && addressForm.get('city')?.invalid }"/>
+       <p *ngIf="addressForm.get('city')?.invalid && addressForm.get('city')?.touched" class="text-danger">
+        Enter City
+      </p>
+    </div>
+  </div>
+  <div class="row mt-4">
+    <div class="col-sm-6 col-12">
+      <input formControlName="zipcode" placeholder="ZipCode" class="form-control" 
+      [ngClass]="{ 'is-invalid': addressForm.get('zipcode')?.touched && addressForm.get('zipcode')?.invalid }"/>
+       <p *ngIf="addressForm.get('zipcode')?.invalid && addressForm.get('zipcode')?.touched" class="text-danger">
+        Enter ZipCode
+      </p>
+    </div>
+  </div>
+  <button type="button" (click)="proceed()" class="btn btn-success mt-4">Place Order</button>
 </form>
