--- a/src/app/dashboard/summary/summary.component.html
+++ b/src/app/dashboard/summary/summary.component.html
@@ -1,7 +1,7 @@
 <div>
-    <h2>Thank you for shopping with us!</h2>
-    <h2>Order Summary</h2>
-    <h4>Items:</h4>
+    <h2 class="mt-4">Thank you for shopping with us!</h2>
+    <h3 class="mt-3">Order Summary</h3>
+    <h3>Items:</h3>
     <ul>
         <li *ngFor="let item of items">
             {{ item.name }} - ${{ item.price }} 
@@ -10,9 +10,10 @@
     </ul>
 
     <h4>Shipping To:</h4>
-    <p>{{ address.name }}, 
-    {{ address.street }}, 
-    {{ address.city }}</p>
+    <p> {{ address.name }}, 
+    {{ address.addressOne }}, 
+    {{ address.city }}, 
+    {{ address.zipcode }} </p>
 
     <h4>Total: ${{ total }}</h4>
 </div>
