--- a/src/app/auth/login/login.component.html
+++ b/src/app/auth/login/login.component.html
@@ -1,15 +1,24 @@
 <div class="container mt-5">
   <form [formGroup]="loginForm">
     <div class="mb-3 row">
-        <label for="userName" class="form-label"> User Name </label>
-        <input type="text" class="form-control" formControlName="userName" placeholder="userName" />
+      <label for="userName" class="form-label"> User Name </label>
+      <input type="text" class="form-control" formControlName="userName" placeholder="Enter User" 
+      [ngClass]="{ 'is-invalid': loginForm.get('userName')?.touched && loginForm.get('userName')?.invalid }" />
+      <p *ngIf="loginForm.get('userName')?.invalid && loginForm.get('userName')?.touched" class="text-danger">
+        Enter User
+      </p>
     </div>
-      
+
     <div class="mb-3 row">
       <label for="password" class="form-label"> Password </label>
-      <input type="password" class="form-control" formControlName="password" placeholder="password" />
+      <input type="password" class="form-control" formControlName="password" placeholder="Enter Password" [ngClass]="{ 'is-invalid': loginForm.get('password')?.touched && loginForm.get('password')?.invalid }" />
+      <p *ngIf="loginForm.get('password')?.invalid && loginForm.get('password')?.touched" class="text-danger">
+        Enter Password
+      </p>
     </div>
-    
-    <button class="btn btn-primary btn-lg" type="button" (click)="onLogin()"> Login </button>
+
+    <div class="text-end">
+      <button class="btn btn-primary btn-lg" type="button" (click)="onLogin()"> Login </button>
+    </div>
   </form>
 </div>
